# Sparse2Full

./: .gitignore  Makefile  README.md  __init__.py  analyze_batch_results.py  analyze_data.py  analyze_results.py  analyze_training_samples.py  batch_retrain_all_models.py  batch_train_all_models.py  benchmark_results.csv  calculate_model_resources.py  check_checkpoint.py  check_hdf5.py  check_pde_data.py  create_comprehensive_html_report.py  create_comprehensive_model_comparison.py  create_enhanced_model_comparison.py  create_final_visualization.py  create_mock_samples.py  create_prediction_comparison.py  create_training_visualization.py  create_visualization.py  eval.py  extract_model_metrics.py  fix_configs.py  fix_swin_unet_training.py  generate_complete_resource_table.py  generate_evaluation_metrics.py  generate_large_splits.py  generate_model_comparison_report.py  generate_performance_table.py  generate_resource_table_simple.py  generate_triplet_visualization.py  generate_visualizations.py  monitor_training.py  pyproject.toml  pytest.ini  regenerate_samples.py  requirements.txt  (+19 more)
configs/: config.yaml  quick_test.yaml  train.yaml  train_swin_t_stable.yaml  train_unetformer_stable.yaml  train_vit_stable.yaml
datasets/: __init__.py  darcy_flow_dataset.py  pde_bench.py  pdebench.py
docs/: API.md  DEVELOPMENT.md  DEVELOPMENT_DEBUG.md
models/: __init__.py  base.py  fno2d.py  hybrid.py  liif.py  liif_head.py  mlp.py  mlp_mixer.py  segformer.py  segformer_unetformer.py  swin_t.py  swin_unet.py  transformer.py  ufno_unet_bottleneck.py  unet.py  unet_plus_plus.py  unetformer.py  vit.py
ops/: __init__.py  degradation.py  loss.py  losses.py  metrics.py  total_loss.py
paper_package/: README.md  package_meta.json
scripts/: download_pdebench_data.py  reproduce_experiments.py  setup_environment.py  test_pdebench_integration.py
tests/: __init__.py  conftest.py  run_all_tests.py  run_e2e_tests.py  test_basic.py  test_data_pipeline.py  test_dc_loss.py  test_distributed.py  test_e2e.py  test_e2e_comprehensive.py  test_e2e_simple.py  test_e2e_training.py  test_end_to_end.py  test_metrics.py  (+9 more)
(+130 files in other folders)
